fix: Add better spacing between the content-card-grid items and before the content-card-grid element Card: https://app.clickup.com/t/86by8crb4

--- a/src/styles/elements/_content-card-grid.css
+++ b/src/styles/elements/_content-card-grid.css
@@ -4,10 +4,10 @@
         --content-card-grid-flex-wrap: wrap;
         --content-card-grid-align-items: start;
         --content-card-grid-justify-content: center;
-        --content-card-grid-gap: var(--content-spacing-between-columns);
+        --content-card-grid-gap: var(--spacing-between-consecutive-elements-normal);
         --content-card-grid-width: var(--content-width-with-padding);
         --content-card-grid-max-width: var(--content-wide-max-width);
-        --content-card-grid-margin: var(--spacing-between-elements-normal) auto 0;
+        --content-card-grid-margin: var(--spacing-between-consecutive-elements-normal) auto 0;
         --content-card-grid-z-index: var(--z-index-content);
 
         display: var(--content-card-grid-display);
@@ -19,6 +19,11 @@
         max-width: var(--content-card-grid-max-width);
         margin: var(--content-card-grid-margin);
         z-index: var(--content-card-grid-z-index);
+    }
+
+    span:first-child + .content-card-grid,
+    .content-card-grid:first-child {
+        --content-card-grid-margin: var(--spacing-between-elements-normal) auto 0;
     }
 
     .content-card-grid[fullwidth] {
